--- a/main.html
+++ b/main.html
@@ -8,6 +8,26 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+		
+            <legend>What is the capital of India?</legend>
+		    <br>
+            
+            <!-- Radio buttons for answer options -->
+            <label>
+                <input type="radio" name="capital" value="newDelhi">
+                New Delhi
+            </label>
+            <br>
+            <label>
+                <input type="radio" name="capital" value="mumbai">
+                Mumbai
+            </label>
+       
+	</form>
+	 <blockquote>
+        New Delhi is the capital of India and an administrative district of NCT Delhi.
+    </blockquote>
     <script type="text/javascript" src="./script.js">
 </script>
 
