--- a/main.html
+++ b/main.html
@@ -25,7 +25,7 @@
             </label>
        
 	</form>
-	 <blockquote cite="https://en.wikipedia.org/wiki/New_Delhi"
+	 <blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">
         New Delhi is the capital of India and an administrative district of NCT Delhi.
     </blockquote>
     <script type="text/javascript" src="./script.js">
